// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/postcss.js should accept a \`json\` property and write exports to that file 1`] = `
"{
    \\"folder/folder.css\\": {
        \\"folder\\": \\"folder\\"
    },
    \\"local.css\\": {
        \\"folder\\": \\"white\\",
        \\"one\\": \\"red\\",
        \\"two\\": \\"blue\\",
        \\"booga\\": \\"booga\\",
        \\"looga\\": \\"booga looga\\"
    },
    \\"start.css\\": {
        \\"one\\": \\"red\\",
        \\"two\\": \\"blue\\",
        \\"folder\\": \\"white\\",
        \\"wooga\\": \\"booga wooga\\",
        \\"booga\\": \\"booga\\",
        \\"tooga\\": \\"tooga\\"
    }
}"
`;

exports[`/postcss.js should accept json args in either position with postcss 1`] = `
"{
    \\"simple.css\\": {
        \\"str\\": \\"\\\\\\"string\\\\\\"\\",
        \\"fooga\\": \\"fooga\\"
    }
}"
`;

exports[`/postcss.js should accept normal processor options 1`] = `
".fooga_fooga {
    color: red;
}

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIi4uLy4uLy4uL0FwcERhdGEvTG9jYWwvVGVtcC9jZjllNDhkNTUwMTQ2YmMxMGZkMDc4ZjJlM2M0MWJjNC9zaW1wbGUuY3NzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUVBO0lBQ0ksV0FBVztDQUNkIiwiZmlsZSI6Ii4uLy4uLy4uL0FwcERhdGEvTG9jYWwvVGVtcC9jZjllNDhkNTUwMTQ2YmMxMGZkMDc4ZjJlM2M0MWJjNC9zaW1wbGUuY3NzIiwic291cmNlc0NvbnRlbnQiOlsiQHZhbHVlIHN0cjogXCJzdHJpbmdcIjtcblxuLmZvb2dhIHtcbiAgICBjb2xvcjogcmVkO1xufVxuIl19 */"
`;

exports[`/postcss.js should be usable like a normal postcss plugin 1`] = `
".a {
    color: red;
}

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIi4uLy4uLy4uL0FwcERhdGEvTG9jYWwvVGVtcC9jZjllNDhkNTUwMTQ2YmMxMGZkMDc4ZjJlM2M0MWJjNC9zaW1wbGUuY3NzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUVBO0lBQ0ksV0FBVztDQUNkIiwiZmlsZSI6Ii4uLy4uLy4uL0FwcERhdGEvTG9jYWwvVGVtcC9jZjllNDhkNTUwMTQ2YmMxMGZkMDc4ZjJlM2M0MWJjNC9zaW1wbGUuY3NzIiwic291cmNlc0NvbnRlbnQiOlsiQHZhbHVlIHN0cjogXCJzdHJpbmdcIjtcblxuLmZvb2dhIHtcbiAgICBjb2xvcjogcmVkO1xufVxuIl19 */"
`;

exports[`/postcss.js should output json when used within postcss 1`] = `
"{
    \\"simple.css\\": {
        \\"str\\": \\"\\\\\\"string\\\\\\"\\",
        \\"fooga\\": \\"fooga\\"
    }
}"
`;

exports[`/postcss.js should process CSS and output exports as a message 1`] = `
Array [
  Object {
    "exports": Object {
      "fooga": Array [
        "fooga",
      ],
      "str": "\\"string\\"",
    },
    "type": "modular-css-exports",
  },
]
`;

exports[`/postcss.js should process CSS and output the result 1`] = `
".fooga {
    color: red;
}
"
`;

exports[`/postcss.js should process CSS with dependencies and output the result 1`] = `
".booga { color: red; background: blue; }
.tooga { border: 1px solid white; }
"
`;

exports[`/postcss.js should use output filepath for json if a custom path isn't provided 1`] = `
"{
    \\"folder/folder.css\\": {
        \\"folder\\": \\"folder\\"
    },
    \\"local.css\\": {
        \\"folder\\": \\"white\\",
        \\"one\\": \\"red\\",
        \\"two\\": \\"blue\\",
        \\"booga\\": \\"booga\\",
        \\"looga\\": \\"booga looga\\"
    },
    \\"start.css\\": {
        \\"one\\": \\"red\\",
        \\"two\\": \\"blue\\",
        \\"folder\\": \\"white\\",
        \\"wooga\\": \\"booga wooga\\",
        \\"booga\\": \\"booga\\",
        \\"tooga\\": \\"tooga\\"
    }
}"
`;
